<resources>
    <string name="app_name">Kenyang</string>
    <string name="jargon">Solusi pintar saat perut lapar</string>
    <string name="email_or_username">Email atau username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search_hint">Cari makanan biar kenyang, yuk!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori">Kategori</string>
    <string name="menu_rekomendasi">Menu rekomendasi</string>
    <string name="barrier">|</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="check_expire">Cek Kadaluarsa</string>
    <string name="back">Kembali</string>
    <string name="check">Periksa</string>
    <string name="home">Home</string>
    <string name="order">Pesanan</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="cari_produk_disini">Cari makanan disini</string>
    <string name="rp10_000">Rp10.000</string>
    <string name="nama">Nama</string>
    <string name="detail_produk">Detail Makanan</string>
    <string name="_1">1</string>
    <string name="stok">Stok</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="beli_sekarang">Beli Sekarang</string>
    <string name="keranjang">Keranjang</string>

</resources>