<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/app_name"
        style="@style/AppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="97dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/jargon"
        style="@style/Jargon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/jargon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jargon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:hint="@string/email_or_username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/il_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/EditText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Button"
        android:layout_width="match_parent"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/il_password" />

</androidx.constraintlayout.widget.ConstraintLayout>